@@ -857,3 +857,62 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 prog.cob: 13: warning: 'filename' will be implicitly defined
 ])
 AT_CLEANUP
+
+
+AT_SETUP([KEY type checks])
+AT_KEYWORDS([RELATIVE FILE])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+            SELECT FILE1 ASSIGN DISK
+            ORGANIZATION RELATIVE ACCESS MODE RANDOM
+            RELATIVE KEY FILE1-KEY.
+            SELECT FILE2 ASSIGN DISK
+            ORGANIZATION RELATIVE ACCESS MODE RANDOM
+            RELATIVE KEY FILE2-KEY.
+            SELECT FILE3 ASSIGN DISK
+            ORGANIZATION RELATIVE ACCESS MODE RANDOM
+            RELATIVE KEY FILE3-KEY.
+            SELECT FILE4 ASSIGN DISK
+            ORGANIZATION RELATIVE ACCESS MODE RANDOM
+            RELATIVE KEY FILE4-KEY.
+            SELECT FILE5 ASSIGN DISK
+            ORGANIZATION RELATIVE ACCESS MODE RANDOM
+            RELATIVE KEY FILE5-KEY.
+       DATA DIVISION.
+       FILE SECTION.
+       FD FILE1.
+            01  FILE1-REC PIC X.
+       FD FILE2.
+            01  FILE2-REC PIC X.
+       FD FILE3.
+            01  FILE3-REC PIC X.
+       FD FILE4.
+            01  FILE4-REC.
+               05  FLD1      PIC X.
+               05  FILE4-KEY PIC 999.
+       FD FILE5.
+            01  FILE5-REC PIC X.
+       WORKING-STORAGE SECTION.
+            77  FILE1-KEY PIC XXXX.
+            01  FILE2-KEY.
+                05  F2-KEY PIC 9(5).
+            01  F3-KEY.
+                05  FILE3-KEY PIC 9(5) OCCURS 2 TIMES.
+            77  FILE5-KEY PIC 999V9.
+       PROCEDURE DIVISION.
+            STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob], [1], [], [prog.cob: 9: Error: File FILE1: RELATIVE KEY FILE1-KEY is not numeric
+prog.cob: 12: Error: File FILE2: RELATIVE KEY FILE2-KEY is not numeric
+prog.cob: 15: Error: File FILE3: RELATIVE KEY FILE3-KEY cannot have OCCURS
+prog.cob: 18: Error: File FILE4: RELATIVE KEY FILE4-KEY declared outside WORKING STORAGE
+prog.cob: 21: Error: File FILE5: RELATIVE KEY FILE5-KEY must be integer
+])
+
+AT_CLEANUP
